changed footer and about

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 
     <!-- google-fonts -->
     <link href="//fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
-    <link href="//fonts.googleapis.com/css2?family=Poppins:wght@200;300;500;700;900&display=swap"
-        rel="stylesheet">
+    <link href="//fonts.googleapis.com/css2?family=Poppins:wght@200;300;500;700;900&display=swap" rel="stylesheet">
     <!-- //google-fonts -->
 
     <!-- Template CSS Style link -->
@@ -577,7 +576,7 @@ At Zimulate Consultech, we believe that every business is unique, with its own s
                     <p class="mb-2">Email : <a href="mailto:zimulateconsultechllp@gmail.com">zimulateconsultechllp@gmail.com</a></p>
                     <p class="mb-2">Support : <a href="mailto:zimulateconsultechllp@gmail.com">support@zimulateconsultechllp@gmail.com</a></p>
                 </div>
-                <div class="col-lg-2 col-md-3 col-6 footer-list-29 mt-md-0 mt-4">
+                <!-- <div class="col-lg-2 col-md-3 col-6 footer-list-29 mt-md-0 mt-4">
                     <ul>
                         <h6 class="footer-title-29">Quick Links</h6>
                         <li><a href="about.html">About Company</a></li>
@@ -586,15 +585,14 @@ At Zimulate Consultech, we believe that every business is unique, with its own s
                         <li><a href="contact.html">Contact Us</a></li>
                         <li><a href="#shortcodes">Shortcodes</a></li>
                     </ul>
-                </div>
+                </div> -->
                 <div class="col-lg-2 col-md-3 col-6 ps-lg-5 ps-lg-4 footer-list-29 mt-md-0 mt-4">
                     <ul>
                         <h6 class="footer-title-29">Explore</h6>
-                        <li><a href="#blog">Blog Posts</a></li>
-                        <li><a href="#privacy">Privacy policy</a></li>
-                        <li><a href="contact.html">Contact Us</a></li>
-                        <li><a href="#license">License & uses</a></li>
-                        <li><a href="#blog">View Articles</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="services.html">Services</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-4 col-md-6 footer-list-29 mt-lg-0 mt-4 ps-lg-5">
