--- a/services.html
+++ b/services.html
@@ -307,11 +307,11 @@
                     <h6 class="footer-title-29">Contact Info </h6>
                     <p class="mb-2 pe-xl-5">Address : zimulateconsultechLLP, Edachira, Kakkanad, Ernakulam.
                     </p>
-                    <p class="mb-2">Phone Number : <a href="tel:8867376358">8867376358</a></p>
+                    <p class="mb-2">Phone Number : <a href="tel:+1(21) 234 4567"></a>8867376358</p>
                     <p class="mb-2">Email : <a href="mailto:zimulateconsultechllp@gmail.com">zimulateconsultechllp@gmail.com</a></p>
-                    <p class="mb-2">Support : <a href="mailto:support@example.com">support@zimulateconsultechllp.com</a></p>
+                    <p class="mb-2">Support : <a href="mailto:zimulateconsultechllp@gmail.com">support@zimulateconsultechllp@gmail.com</a></p>
                 </div>
-                <div class="col-lg-2 col-md-3 col-6 footer-list-29 mt-md-0 mt-4">
+                <!-- <div class="col-lg-2 col-md-3 col-6 footer-list-29 mt-md-0 mt-4">
                     <ul>
                         <h6 class="footer-title-29">Quick Links</h6>
                         <li><a href="about.html">About Company</a></li>
@@ -320,15 +320,14 @@
                         <li><a href="contact.html">Contact Us</a></li>
                         <li><a href="#shortcodes">Shortcodes</a></li>
                     </ul>
-                </div>
+                </div> -->
                 <div class="col-lg-2 col-md-3 col-6 ps-lg-5 ps-lg-4 footer-list-29 mt-md-0 mt-4">
                     <ul>
                         <h6 class="footer-title-29">Explore</h6>
-                        <li><a href="#blog">Blog Posts</a></li>
-                        <li><a href="#privacy">Privacy policy</a></li>
-                        <li><a href="contact.html">Contact Us</a></li>
-                        <li><a href="#license">License & uses</a></li>
-                        <li><a href="#blog">View Articles</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="services.html">Services</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-4 col-md-6 footer-list-29 mt-lg-0 mt-4 ps-lg-5">
@@ -342,7 +341,7 @@
                 </div>
             </div>
             <!-- copyright -->
-                <p class="copy-footer-29 text-center mt-5 pb-2">© 2024 zimulateconsultechLLP. All rights reserved. 
+            <p class="copy-footer-29 text-center mt-5 pb-2">© 2024 zimulateconsultechLLP. All rights reserved. 
             <!-- //copyright -->
         </div>
     </div>
