--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     <div class="container py-lg-5 py-md-4">
         <div class="py-lg-5 py-4">
             <div class="banner-info-grid">
-                <h3 class="mb-4"><sup>The</sup> Best Creative Solutions.</h3>
+                <h3 class="mb-4"><span>Inspiration Through Innovation.</span></h3>
                 <p>Empowering Growth, Inspiring Success: Your Partner in Progress.</p>
                 <a class="btn btn-secondary btn-style mt-5 me-2" href="#discover"> Discover Now </a>
                 <a class="btn btn-style transparent-btn mt-5" href="about.html"> Get Started </a>
