--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             </div>
             <div class="col-lg-6 w3l-about-info px-lg-4 align-center">
                 <h6 class="w3l-title-small mb-1">About Us</h6>
-                <h3 class="w3l-title-main mb-2">Best tech consultency in the world</h3>
+                <h3 class="w3l-title-main mb-2">One of the growing tech consultency in kerala.</h3>
                 <p class="my-4 pe-lg-5">Zimulate Consultech LLP is a dynamic and forward-thinking consulting firm dedicated to empowering businesses to achieve their full potential. Established with a vision to redefine the consulting landscape, we bring together a team of seasoned professionals with diverse expertise and a passion for driving impactful change.
 At Zimulate Consultech, we believe that every business is unique, with its own set of challenges, opportunities, and goals. That's why we take a personalized approach to every client engagement, working closely with our clients to understand their specific needs and develop tailored solutions that deliver measurable results.</p>
                 <h5 class="w3l-subtitle">We provide the best services for your growing company.</h5>
